# Orchard-Inference

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  performance_report.md
benchmarks/runners/: batching.py  cache.py
dashboards/: alerts.yml  orchard-inference.json
scripts/: compare-mlx-mps.sh  generate-benchmark-charts.py  run-benchmark-experiments.sh
src/orchard_inference/: __init__.py  api.py  benchmark.py  cache.py  chunked_prefill.py  compare_mlx.py  config.py  continuous_batching.py  errors.py  kv_blocks.py  lifecycle.py  logging.py  main.py  models.py  observability.py  plot_compare.py  prefix_router.py  quantization.py  scheduler.py  ui.py
src/orchard_inference/backends/: __init__.py  base.py  mlx.py  mock.py  pytorch_mps.py
src/orchard_inference/data/: __init__.py  quantization_eval.json
tests/integration/: test_api.py
tests/unit/: test_benchmark.py  test_cache.py  test_chart_generator.py  test_chunked_prefill.py  test_compare_mlx.py  test_config.py  test_continuous_batching.py  test_kv_blocks.py  test_lifecycle.py  test_mock_backend.py  test_observability.py  test_prefix_router.py  test_pytorch_mps_backend.py  test_quantization.py  test_scheduler.py
